[Settings] Split the setting activity + code clean